fixed some spacing

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -19,6 +19,10 @@ html {
   font: normal 125%/1.4 Georgia, serif;
 }
 
+body {
+  margin: .5em;
+}
+
 /* Skiplinks */
 .skiplinks {
   margin: 0;
